fix(tree,icon): aligned icons color with design (#DS-2875)

--- a/packages/components/tree/_tree-theme.scss
+++ b/packages/components/tree/_tree-theme.scss
@@ -51,7 +51,7 @@
             @include kbq-tree-option(states-disabled);
 
             & .kbq-icon {
-                cursor: default;
+                color: var(--kbq-states-icon-disabled);
             }
         }
     }
